created new project

--- a/Enterprise/assets/css/home.css
+++ b/Enterprise/assets/css/home.css
@@ -6,6 +6,9 @@
     padding: 32px;
     height: 107px;
     border-bottom: 1px solid var(--gray10);
+    position: sticky;
+    top: 0;
+    background-color: #fff;
 }
 
 .logo_content{
@@ -80,7 +83,7 @@
 
 .corusel_title{
     color: var(--textBlack);
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 700;
     line-height: 80px;
 }
@@ -117,10 +120,7 @@ letter-spacing: -0.48px;
     transition: all.3s;
     cursor: pointer;
     border: none;
-    -webkit-transition: all.3s;
-    -moz-transition: all.3s;
-    -ms-transition: all.3s;
-    -o-transition: all.3s;
+    
 }
 
 .btn:hover{
@@ -158,12 +158,17 @@ letter-spacing: -0.48px;
   .div_card {
     padding: 48px 56px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    padding: 50px;
+    gap: 20px;
+
   }
   .card_info {
     display: flex;
-    flex-wrap: wrap;
-    gap: 23px;
+    gap: 20px;
+
+    
+
   }
 
   .cards_intro {
@@ -311,6 +316,10 @@ letter-spacing: -0.48px;
     background-color:var(--mainWhite);
     display: flex;
     flex-direction: column;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
 }
   
   .prop_member {
@@ -328,7 +337,7 @@ letter-spacing: -0.48px;
     color: #303031;
     font-size: 24px;
     font-weight: 700;
-    line-height: 32px; /* 133.333% */
+    line-height: 32px;
     letter-spacing: -0.48px;
   }
   
@@ -337,7 +346,7 @@ letter-spacing: -0.48px;
     font-size: 16px;
     font-style: italic;
     font-weight: 100;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
     letter-spacing: -0.32px;
   }
   
@@ -351,7 +360,7 @@ letter-spacing: -0.48px;
     color: #303031;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px; /* 150% */
+    line-height: 24px; 
     letter-spacing: -0.32px;
   }
   
@@ -383,7 +392,7 @@ letter-spacing: -0.48px;
     color: var(--gray20);
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px; /* 150% */
+    line-height: 24px; 
     letter-spacing: -0.32px;
   }
   
@@ -391,7 +400,7 @@ letter-spacing: -0.48px;
     color: #303031;
     font-size: 24px;
     font-weight: 500;
-    line-height: 32px; /* 133.333% */
+    line-height: 32px;
     letter-spacing: -0.48px;
   }
   
@@ -411,7 +420,11 @@ letter-spacing: -0.48px;
     line-height: 32px;
     letter-spacing: -0.48px;
     text-align: center;
-  }
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
   
   .propos_feature {
     display: flex;
@@ -420,8 +433,118 @@ letter-spacing: -0.48px;
     flex-wrap: wrap;
   }
 
+  .part5{
+    padding-top: 108px;
+  }
 
+  .div_box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
   
+  }
+  .logo_txt{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 50%;
+  }
+  .logo_titleh2{
+    color: var(--textBlack);
+    font-family: 'Roboto' sans-serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 64px;
+
+
+  }
+  .logo_img{
+    width: 64px;
+    height:64px;
+    padding-top: 15px;
+  }
+  .logo_desc{
+    color: var(--textBlack);
+    font-family: 'Roboto' sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing:-0.36px
+  }
+  .il_box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .task{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 50%;
+  }
+
+
+  .task_box{
+    width: 80%;
+  
+  }
+
+  .task_card{
+    border: 4px solid var(--textBlack);
+    border-radius: 16px;
+    background: var(--mainWhite);
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 48px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+.task_title{
+  color: var(--textBlack);
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: -0.36px;
+
+}
+
+.taks_desc{
+  color: var(--textBlack);
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: -0.32px;
+
+}
+
+.tsk_btn{
+  border-radius: 20px;
+  background: var(--mainGreen);
+  color: var(--mainWhite);
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  padding: 4px 8px;
+  border: 2px solid var(--mainGreen);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
 
 
 
