--- a/Enterprise/assets/css/variable.css
+++ b/Enterprise/assets/css/variable.css
@@ -1,6 +1,10 @@
 :root{
     --mainGreen:#71A894;
     --textBlack:#303031;
+    --Light-Gold: #F3F0EA;
+    --Green: #71A894
+
+
        
     --mainWhite:#ffff;
     --bodyBackgroundColor:#F9F9F9;
